added change pass e2e test
